# DeepRESIS

./: .gitignore  MANIFEST.in  README.md  deepresis.allcopy.toml  deepresis.hfassets.default.v1.toml  deepresis.hfdefault.v2.toml  deepresis.localcopy.toml  environment.yml  pyproject.toml  requirements.txt
deepresis/: __init__.py  cli.py  config.py  io_utils.py  logging_utils.py  pipeline.py  types.py
deepresis/gene/: __init__.py  ranking.py
deepresis/legacy/: __init__.py
deepresis/legacy/ncresis_backend/: __init__.py  drug_descriptor.py  drug_fingerprint.py  ncrna_feature.py
deepresis/legacy/ncresis_backend/descriptor/: 1345_drug_descriptors.txt  autocorr.py  charge.py  connectivity.py  constitution.py  estate.py  fragment.py  infocontent.py  kappa.py  matrix.py  moe.py  path.py  property.py  topology.py
deepresis/legacy/ncresis_backend/fingerprint/: __init__.py
deepresis/legacy/ncresis_backend/methods/: Methods_all_16_methods.py  _01_ORF_code.py  _18_SStructure.py  _19_CTDcoder_st_ph.py
deepresis/legacy/ncresis_backend/methods/repDNA/: ac.py  (+5 more)
deepresis/models/: __init__.py  transformer.py
deepresis/predictors/: resistance.py
deepresis/resources/: deepresis.example.toml
examples/: run_demo.sh  test.fasta  test_cid.txt  test_pairs.txt
outputs_bootstrap_verify/: topk_genes.tsv
outputs_localcopy_config/: gene_ranking_warnings.tsv  resistance_predictions.tsv
scripts/: bootstrap_all.sh  bootstrap_assets.sh  bootstrap_env.sh  check_runtime.py
tests/: test_cli.py  test_config.py  test_io_utils.py  test_minimal_example.py  test_pipeline_validation.py
(+1 files in other folders)
